[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Dynamicfont.tres" type="DynamicFont" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1

[node name="MessagesLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = -110.0
margin_right = 226.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "Flieh vor den 
Monster"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = -100.0
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
